--- a/_source/css/layout/_allPages.scss
+++ b/_source/css/layout/_allPages.scss
@@ -639,6 +639,213 @@ body {
 		@include u-showElement;
 	}
 }
+.l-headerDpt {
+	display: block;
+	padding: 20px 0;
+	h1 {
+		@include defaultH1;
+		text-align: center;
+	}
+}
+.l-bannerDpt {
+	img {
+		display: block;
+		width: 100%;
+		height: 300px;
+		object-fit: cover;
+		object-position: center;
+	}
+}
+.l-contentDpt {
+
+}
+.l-asideFilters {
+	@include flexWidth(200px);
+	.c-toggleList {
+		border-top: 1px solid $lastGray;
+		padding-top: 8px;
+		padding-bottom: 30px;
+		&.is-active {
+			.c-toggleList__content {
+				padding-left: 0;
+				padding-right: 0;
+			}
+		}
+	}
+	.grid__colors {
+		display: flex;
+		flex-direction: row;
+		align-items: center;
+		justify-content: center;
+		flex-wrap: wrap;
+		li {
+			flex: 0 1 auto;
+			padding: 5px;
+		}
+		a {
+			@include roundedAll(50%);
+			display: block;
+			width: 26px;
+			height: 26px;
+			border: 1px solid transparent;
+			&:hover {
+				border: 1px solid $primary;
+			}
+		}
+	}
+	.grid__sizes {
+		display: flex;
+		flex-direction: row;
+		align-items: center;
+		justify-content: center;
+		flex-wrap: wrap;
+		li {
+			flex: 0 1 auto;
+			padding: 5px;
+		}
+		a {
+			@include transition();
+			@include roundedAll(2px);
+			border: 1px solid $mutedGray;
+			background: $white3;
+			display: block;
+			width: 30px;
+			height: 26px;
+			line-height: 24px;
+			font-size: 14px;
+			text-align: center;
+			color: $black ;
+			&:hover, &.is-active {
+				background: $greenDark;
+				color: $white;
+			}
+		}
+	}
+	.list__links {
+		li {
+			display: block;
+			width: 100%;
+			margin-bottom: 10px;
+		}
+		a {
+			@include paragrafos();
+			&:hover {
+				color: $primary;
+				text-decoration: underline;
+			}
+		}
+	}
+	.list__filter {
+		a {
+			display: flex;
+			flex-direction: row;
+			align-items: center;
+		}
+		.check {
+			@include roundedAll(2px);
+			@include transition();
+			width: 18px;
+			height: 18px;
+			display: block;
+			background: $white3;
+			border: 1px solid $mutedGray;
+			margin-right: 5px;
+			&:checked, &.is-active {
+				background-color: $greenDark;
+				background-image: url(#{$media_icons}/icon_checked.svg);
+				background-repeat: no-repeat;
+				background-size: 50%;
+				background-position: center;
+				border: 1px solid $greenDark;
+			}
+		}
+	}
+	.js-toggleMoreFilters {
+		display: block;
+		cursor: pointer;
+		margin-top: 15px;
+		@include paragrafos($tc: $black, $fw: $fwSemiBold, $mb: 0);
+		&:hover {
+			color: $greenDark;
+			text-decoration: underline;
+		}
+	}
+}
+.s-gridDpt {
+	flex: 1 1 auto;
+	padding-left: 75px;
+	&__head {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		width: 100%;
+	}
+	.head__numResults {
+		@include paragrafos();
+		padding-right: 30px;
+	}
+	.head__changeView {
+		display: flex;
+		flex-direction: row;
+		align-items: center;
+		justify-content: flex-end;
+		.changeView__orderBy {
+			padding-right: 45px;
+			label {
+				@include paragrafos();
+				margin-right: 5px;
+			}
+			select {
+				@include paragrafos();
+				@include roundedAll(2px);
+				@include appearance(menulist);
+				background: #ECECEC;
+				height: 30px;
+				line-height: 30px;
+				padding: 0 10px;
+				width: 120px;
+			}
+		}
+		.changeView__layout {
+			display: flex;
+			flex-direction: row;
+			align-items: center;
+			li {
+				margin-left: 15px;
+				&:first-of-type {
+					margin-left: 0;
+				}
+			}
+			span {
+				@include opacity(0.5);
+				@include transition();
+				display: block;
+				cursor: pointer;
+				&.is-active {
+					@include opacity(1);
+				}
+				img {
+					display: block;
+					width: auto;
+					height: 22px;
+				}
+			}
+		}
+	}
+	&__content {
+		display: block;
+		width: 100%;
+		> .grid__products {
+			display: flex;
+			flex-wrap: wrap;
+			@include calcWidthForPositionNegative(-10px);
+			> li {
+				@include transition();
+				padding: 10px;
+			}
+		}
+	}
+}
 
 // s-
 .s-brands {
@@ -973,6 +1180,41 @@ body {
 	}
 	h1, h2, h3, h4, h5, h6 {
 		margin-bottom: 10px;
+	}
+}
+.s-breadcrumb {
+	display: block;
+	padding: 15px 0;
+	ul {
+		display: flex;
+		align-items: center;
+		flex-direction: row;
+		flex-wrap: wrap;
+		li {
+			position: relative;
+			margin-right: 35px;
+			&:after {
+				@include paragrafos();
+				content: '/';
+				display: block;
+				position: absolute;
+				right: -21px;
+				top: 0;
+			}
+			&:last-of-type {
+				margin-right: 0;
+				&:after {
+					display: none;
+				}
+			}
+		}
+		a {
+			@include paragrafos();
+			&:hover {
+				text-decoration: underline;
+				color: $primaryDark;
+			}
+		}
 	}
 }
 
