--- a/_source/css/responsive/_responsiveComponents.scss
+++ b/_source/css/responsive/_responsiveComponents.scss
@@ -31,9 +31,9 @@
 			}
 		}
 	}
-	.c-cardProduct__figure .figureHero img {
-		height: 300px;
-	}
+	//.c-cardProduct__figure .figureHero img {
+	//	height: 300px;
+	//}
 }
 @media screen and (max-width: 420px) {
 	.c-cardProduct .c-cardProduct__sizes {
@@ -41,7 +41,7 @@
 	}
 }
 @media screen and (max-width: 360px) {
-	.c-cardProduct__figure .figureHero img {
-		height: 250px;
-	}
+	//.c-cardProduct__figure .figureHero img {
+	//	height: 250px;
+	//}
 }
