--- a/_source/css/layout/_allPages.scss
+++ b/_source/css/layout/_allPages.scss
@@ -642,6 +642,7 @@ body {
 .l-headerDpt {
 	display: block;
 	padding: 20px 0;
+	margin-bottom: 15px;
 	h1 {
 		@include defaultH1;
 		text-align: center;
@@ -835,15 +836,43 @@ body {
 	&__content {
 		display: block;
 		width: 100%;
-		> .grid__products {
-			display: flex;
-			flex-wrap: wrap;
-			@include calcWidthForPositionNegative(-10px);
-			> li {
-				@include transition();
-				padding: 10px;
-			}
+	}
+	.grid__products {
+		display: flex;
+		flex-wrap: wrap;
+		@include calcWidthForPositionNegative(-10px);
+		> li {
+			@include transition();
+			padding: 10px;
 		}
+	}
+	.content__cta {
+		padding: 40px 0;
+		.c-btn {
+			margin: 0 auto;
+			height: 56px;
+			line-height: 54px;
+			min-width: 200px;
+		}
+	}
+}
+.s-descriptionDpt {
+	padding-top: 30px;
+	margin-top: 80px;
+	border-top: 1px solid $mutedGray;
+	padding-bottom: 100px;
+	h2 {
+		display: block;
+		margin-bottom: 15px;
+		color: $black;
+		text-transform: uppercase;
+		font-size: 20px;
+		font-weight: $fwRegular;
+		text-align: center;
+	}
+	p {
+		@include paragrafos();
+		text-align: center;
 	}
 }
 
