--- a/_source/css/layout/_components.scss
+++ b/_source/css/layout/_components.scss
@@ -1460,15 +1460,17 @@ $c_btnIcon_maxWidth: 300px;
         overflow: hidden;
         display: block;
         .figureHero {
-            display: block;
-            width: 100%;
-            img {
-                display: block;
-                width: 100%;
-                height: 430px;
-                object-fit: cover;
-                object-position: center;
-            }
+            //display: block;
+            //width: 100%;
+            @extend .u-aspectRatio;
+            padding-top: 150%;
+            //img {
+            //    display: block;
+            //    width: 100%;
+            //    height: 430px;
+            //    object-fit: cover;
+            //    object-position: center;
+            //}
         }
     }
     &__sizes {
