--- a/_source/css/layout/_components.scss
+++ b/_source/css/layout/_components.scss
@@ -1459,18 +1459,25 @@ $c_btnIcon_maxWidth: 300px;
         position: relative;
         overflow: hidden;
         display: block;
+        min-width: 0px;
         .figureHero {
-            //display: block;
-            //width: 100%;
             @extend .u-aspectRatio;
             padding-top: 150%;
-            //img {
-            //    display: block;
-            //    width: 100%;
-            //    height: 430px;
-            //    object-fit: cover;
-            //    object-position: center;
-            //}
+        }
+        .featurePromotion {
+            display: inline-block;
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            background: #8E36D3;
+            height: 24px;
+            line-height: 24px;
+            padding: 0 10px;
+            color: $white;
+            font-weight: $fwBold;
+            font-size: 14px;
+            text-transform: uppercase;
+            z-index: 4;
         }
     }
     &__sizes {
@@ -1479,6 +1486,7 @@ $c_btnIcon_maxWidth: 300px;
         overflow: hidden;
         position: absolute;
         bottom: -40px;
+        //bottom: 0;
         left: 0;
         display: flex;
         justify-content: center;
@@ -1486,8 +1494,20 @@ $c_btnIcon_maxWidth: 300px;
         background: rgba(0,0,0,0.3);
         z-index: 2;
         padding: 15px 5px;
-        li {
-            padding: 0 2px;
+        .slick__sizes {
+            min-width: 0;
+            max-width: 200px;
+            .slick-slide {
+                min-width: 40px;
+            }
+            .slick-track {
+                display: flex;
+                flex-direction: row;
+                flex-wrap: nowrap;
+            }
+            * {
+                max-width: 200px;
+            }
         }
         a {
             @include transition();
