--- a/_source/css/layout/_allPages.scss
+++ b/_source/css/layout/_allPages.scss
@@ -818,6 +818,42 @@ body {
 		}
 	}
 }
+.l-asideInstitutional {
+	.c-toggleList {
+		padding-bottom: 30px;
+		@extend .is-active;
+		&__header {
+			padding-right: 0;
+			cursor: inherit;
+			&:after {
+				display: none;
+			}
+		}
+		&.is-active {
+			.c-toggleList__content {
+				padding-left: 0;
+				padding-right: 0;
+			}
+		}
+	}
+	.list__links {
+		li {
+			display: block;
+			width: 100%;
+			margin-bottom: 10px;
+		}
+		a {
+			@include paragrafos();
+			&:hover {
+				color: $primary;
+				text-decoration: underline;
+			}
+			&.is-active {
+				font-weight: $fwBold;
+			}
+		}
+	}
+}
 .l-modalMobile {
 	@include transition();
 	@include u-hideElement;
@@ -872,7 +908,9 @@ body {
 			@include flexWidth(100%);
 		}
 	}
-	&.--orderBy {
+	&.--orderBy,
+	&.--defaultMenuList,
+	&.--institutional {
 		ul {
 			li {
 				margin-bottom: 15px;
@@ -887,6 +925,9 @@ body {
 				&:hover {
 					text-decoration: underline;
 					color: $primary;
+				}
+				&.is-active {
+					font-weight: $fwBold;
 				}
 			}
 		}
@@ -1305,7 +1346,7 @@ body {
 	}
 	.pictureInRight,
 	.pictureInLeft {
-		margin: 15px 0;
+		margin: 25px 0;
 		display: flex;
 		flex-direction: row;
 		align-items: center;
@@ -1314,6 +1355,10 @@ body {
 			@include flexWidth(40%);
 			figcaption {
 				@include paragrafos($fs: 14px);
+			}
+			img {
+				display: block;
+				width: 100%;
 			}
 		}
 		> div {
@@ -1328,6 +1373,17 @@ body {
 		> div {
 			padding-left: 0;
 			padding-right: 50px;
+		}
+	}
+}
+.s-onlyText__menuMobile {
+	width: 100%;
+	padding: 15px;
+	.c-btn {
+		max-width: 100%;
+		&.--stroke {
+			border-color: $lightGray;
+			color: $baseGray;
 		}
 	}
 }
@@ -1362,6 +1418,9 @@ body {
 			&:hover {
 				text-decoration: underline;
 				color: $primaryDark;
+			}
+			&.is-active {
+				font-weight: $fwSemiBold;
 			}
 		}
 	}
@@ -1468,6 +1527,98 @@ body {
 	p {
 		@include paragrafos();
 		text-align: center;
+	}
+}
+.s-productShop {
+	overflow: hidden;
+	max-width: 100vw;
+	.swiper__productShop {
+		position: relative;
+		z-index: 1;
+		a {
+			display: block;
+			width: 100%;
+			img {
+				display: block;
+				width: 100%;
+				height: 760px;
+				object-position: center top;
+				object-fit: cover;
+			}
+		}
+		.swiper-button-next {
+			@include calc(right, 50%, '+', 25px);
+		}
+	}
+	.swiper__productShopThumbs {
+		margin-top: 10px;
+		overflow: hidden;
+		padding-bottom: 30px;
+		width: 50%;
+		padding-right: 15px;
+		.swiper-pagination {
+			bottom: -10px;
+		}
+		.swiper-slide {
+			width: 72px;
+			cursor: pointer;
+			figure {
+				@extend .u-aspectRatio;
+				padding-top: 130%;
+			}
+		}
+	}
+	&__buy {
+		position: absolute;
+		right: 15px;
+		top: 0;
+		z-index: 2;
+		display: block;
+		width: 50%;
+		height: 100%;
+		background: $white;
+		padding: 30px;
+	}
+}
+.s-aboutProduct {
+	p {
+		@include paragrafos();
+	}
+	.c-toggleList {
+		padding-top: 30px;
+		margin-top: 50px;
+		border-top: 1px solid $mutedGray;
+		&__header {
+			h2 {
+				font-size: 20px;
+				font-weight: $fwRegular;
+			}
+		}
+		&.is-active {
+			.c-toggleList__content {
+				padding-left: 0;
+				padding-right: 0;
+			}
+		}
+	}
+}
+.s-ratingsProduct {
+	margin-bottom: 50px;
+	margin-top: 100px;
+	display: block;
+	h1 {
+		@include defaultH1();
+	}
+	p {
+		@include paragrafos();
+		text-align: center;
+	}
+	.u-container {
+		> div {
+			padding: 50px 0;
+			border-top: 1px solid $mutedGray;
+			border-bottom: 1px solid $mutedGray;
+		}
 	}
 }
 
