change path media

--- a/_source/css/themes/_default.scss
+++ b/_source/css/themes/_default.scss
@@ -38,9 +38,9 @@ $containerBigWidth: 1440px;
 $maxRowWidth: 2560px;
 
 // media folders
-$media_assets : "../media/img/assets/";
-$media_icons : "../media/img/icons/";
-$media_content : "../media/img/content/";
+$media_assets : "arquivos/";
+$media_icons : "arquivos/";
+$media_content : "arquivos/";
 //example: background-image: url(#{$media_assets}image.png);
 
 // text
